B&L QA/objects/Shipping_History__c.object
<CustomObject>
    <description>NORDCSS: Stores the Shipping History from Peoplesoft relating to Orders.</description>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Shipping History</relationshipLabel>
        <relationshipName>Shipping_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_No__c</fullName>
        <formula>Order_Line_Item__r.Item__c</formula>
        <label>Item No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <description>The Lot ID of the shipment</description>
        <label>Lot_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchKey__c</fullName>
        <externalId>true</externalId>
        <label>MatchKey</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>Shipping History</relationshipLabel>
        <relationshipName>Shipping_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order_Header__c</referenceTo>
        <relationshipLabel>Shipping History</relationshipLabel>
        <relationshipName>Shipping_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pack_List_No__c</fullName>
        <description>B&amp;L Number that gets assigned when the shipment gets prepared at the warehouse.</description>
        <label>Pack List No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Backordered__c</fullName>
        <label>Quantity Backordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <label>Shipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unfulfilled</fullName>
                    <default>true</default>
                    <label>Unfulfilled</label>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>On Pick Plan</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Depleted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_for_By__c</fullName>
        <label>Signed for By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_No__c</fullName>
        <description>No. provided by the carrier - will be used with the carrier&apos;s website where possible.</description>
        <label>Tracking No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Shipping History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SH-{YY}{0000000}</displayFormat>
        <label>Shipping History Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>